src/objects/PANG_Data_Asset_Country__c.object
<CustomObject>
    <description>Join object relating RWE Data Assets to RWE Countries</description>
    <fields>
        <fullName>Country_Comment__c</fullName>
        <label>Country Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>PANG_Country__c</referenceTo>
        <relationshipLabel>Data Assets</relationshipLabel>
        <relationshipName>RWE_Data_Asset_Countries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Asset__c</fullName>
        <label>Data Asset</label>
        <referenceTo>PANG_Data_Asset__c</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>RWE_Data_Asset_Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>RWE Data Asset Country</label>
    <nameField>
        <displayFormat>RWE-DAC-{000000000}</displayFormat>
        <label>Data Asset Country ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RWE Data Asset Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>